; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_collate.c_assign_expr_collations.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_collate.c_assign_expr_collations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32* }

@InvalidOid = common dso_local global i32 0, align 4
@COLLATE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assign_expr_collations(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i32* %6, i32** %7, align 8
  %8 = load i32, i32* @InvalidOid, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i32 %8, i32* %9, align 8
  %10 = load i32, i32* @COLLATE_NONE, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 -1, i32* %12, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @assign_collations_walker(i32* %13, %struct.TYPE_3__* %5)
  ret void
}

declare dso_local i32 @assign_collations_walker(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
